--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,7 @@
 [submodule "swift-gate-frontend"]
 	path = swift-gate-frontend
 	url = https://github.com/0x73696d616f/swift-gate-frontend
+	branch = master
 [submodule "swift-gate-backend"]
 	path = swift-gate-backend
 	url = https://github.com/0x73696d616f/swift-gate-backend
